Fixed positioning on mobile

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -7,7 +7,7 @@
         margin-top: 90px;
     }
     .headphone-sq {
-        margin-top: 50px;
+        margin-top: 150px !important;
         border-width: 2px;
         border-style: solid;
         border-radius: 50%;
@@ -15,6 +15,6 @@
         height: 180px;
     }
     .mb-text {
-        margin-top: -150px;
+        margin-top: -100px;
     }
 }
